# base

./: README.md  pyproject.toml
homeworks/01_simple_etl/: generate_data.py  readme.md
homeworks/02_pyspark/: generate_data.py  readme.md
homeworks/03_course_project/: generate_data.py  readme.md
notebooks/: 01_spark_demo.ipynb  02_lakehouse_demo.ipynb  03_streaming_cdc_demo.ipynb
sample_projects/01_simple_etl/: Makefile  README.md  pyproject.toml
sample_projects/01_simple_etl/01_simple_etl/: extract.py  load.py  main.py  transform.py
sample_projects/01_simple_etl/docs/: mkdocs.yml
sample_projects/01_simple_etl/docs/docs/: index.md
sample_projects/02_airflow/: readme.md
sample_projects/03_sql/: seminar.sql  sql_demo.ipynb
