[project]
name = "etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "delta-spark>=4.2.0",
    "duckdb>=1.5.2",
    "jupyter>=1.1.1",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.1",
    "pyiceberg>=0.11.1",
    "pyspark>=4.1.1",
    "python-pptx>=1.0.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.48",
]
