[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "01_simple_etl"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Your name (or your organization/company/team)" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"
dependencies = [
    "pandas>=2.3.3",
]


[tool.ruff]
line-length = 99
src = ["01_simple_etl"]
include = ["pyproject.toml", "01_simple_etl/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["01_simple_etl"]
force-sort-within-sections = true

